# PHPC-Project

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  compile_commands.json  main.cpp  main.ipynb  parallel_flip  parallel_io.cpp
documents/: CS151_ HPC- Parallel Image Processing.pptx  main.tex
src/: main.ipynb
src/color_transformation/: CMakeLists.txt  benchmark.sh  build.sh  main.cpp  strong_scale_test.sh  weak_scale_test.sh
src/fft/: CMakeLists.txt  benchmark.sh  build.sh  parallel.cpp  parallel_openmp.cpp  sequential.cpp  strong_scale_test.sh  weak_scale_test.sh
src/flipping/: CMakeLists.txt  benchmark.sh  build.sh  compile_commands.json  main.cpp  strong_scale_test.sh  weak_scale_test.sh
src/gaussian_blur/: CMakeLists.txt  benchmark.sh  build.sh  parallel_omp.cpp  sequential.cpp  strong_scale_test.sh  weak_scale_test.sh
src/rotation/: CMakeLists.txt  benchmark.sh  build.sh  main.cpp  strong_scale_test.sh  weak_scale_test.sh
